Fixed horizontal scroll in a dashboard

--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -3,13 +3,14 @@
 
 .noticesStatus {
   @include noticesStatus;
+  margin-bottom: 10vh;
   .noticesStatus__link {
     font-size: inherit;
   }
 }
 
 .dashboard {
-  width: 100vw;
+  max-width: 100vw;
   padding: 2vh 5vw;
   .dashboard__header {
     font-size: $font-medium;
